--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-altair==4.2.0
-numpy==1.21.5
-pandas==1.4.2
-prophet==1.1.2
-scikit_learn==1.2.0
-scipy==1.7.3
-streamlit==1.17.0
+streamlit
+pandas
+altair
+numpy>=1.25.0
+prophet
+setuptools>=67.0.0
+wheel
+holidays
